# curso-mcp

./: .gitignore  README.md  jsonrpc20_example.json  pyproject.toml  test_all.py
ej10_reto/: README.md
ej11_rag_vs_mcp_sakila/: README.md  benchmark_rag_vs_mcp.py  mcp_langchain_client.py  sakila_rag_client.py  sakila_simple_mcp_server.py
ej1_first_chatbot/: README.md  first_mcp_client.py  first_mcp_server.py
ej1_first_chatbot/tests/: test_server_tools.py
ej2_4_chatbot_arxiv/: README.md  app.py  arxiv_mcp_server.py  claude_mcp_client.py  openai_mcp_client.py  tools_arxiv.py
ej2_4_chatbot_arxiv/tests/: test_arxiv_mcp_server.py  test_tools_arxiv.py
ej5_6_chatbot_omdb/: README.md  omdb_llm_client.py  omdb_mcp_client.py  omdb_mcp_server.py
ej5_6_chatbot_omdb/tests/: __init__.py  test_omdb_mcp_server.py
ej7_mcp_rag_db/: README.md  pseudo_client.py  rag_local.py  rag_mcp_server.py  rag_minimal.py  schema.sql  seed_db.py
ej7_mcp_rag_db/tests/: __init__.py  test_rag_mcp_server.py
ej8_sakila_streaming/: README.md  sakila_db.py  sakila_mcp_server.py  streamlit_sakila_client.py
ej8_sakila_streaming/tests/: __init__.py  test_sakila_mcp_server.py
ej9_orquestador/: README.md  orchestrator_mcp_server.py
ej9_orquestador/tests/: __init__.py  test_orchestrator_mcp_server.py
papers/neural_networks/: papers_info.json
